LOGOWANIE I REJESTRACJA ZINTEGROWANA Z DB

--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rejestracja użytkownika: {'detail': 'Username already exists'}\n"
+      "Rejestracja użytkownika: {'message': 'User registered successfully.'}\n"
      ]
     }
    ],
@@ -68,9 +68,8 @@
     "\n",
     "# Dane użytkownika do rejestracji\n",
     "user_data = {\n",
-    "    \"username\": \"bbb\",\n",
-    "    \"password\": \"bbb\",\n",
-    "    \"is_admin\": False\n",
+    "    \"username\": \"12344\",\n",
+    "    \"password\": \"1234\",\n",
     "}\n",
     "\n",
     "# Rejestrowanie użytkownika\n",
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +92,8 @@
    ],
    "source": [
     "login_data = {\n",
-    "    \"username\": \"bbb\",\n",
-    "    \"password\": \"bbb\"\n",
+    "    \"username\": \"1234\",\n",
+    "    \"password\": \"1234\"\n",
     "}\n",
     "\n",
     "# Logowanie użytkownika\n",
