--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rejestracja użytkownika: {'message': 'User registered successfully.'}\n"
+      "Rejestracja użytkownika: {'detail': 'Username already exists'}\n"
      ]
     }
    ],
