--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -2,29 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create User Response: {'id': 3, 'is_admin': False, 'cart_id': None, 'password': 'aaa', 'username': 'aaa', 'address_id': None}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>password</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>htitley0</td>\n",
+       "      <td>vG017?oZU'I+Jt@fsArXzOjO4fP=</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hbutchard1</td>\n",
+       "      <td>yE474)5a$5W3FR6+UppP{cpes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dchick2</td>\n",
+       "      <td>jZ067!m*y~%*s?m7~@&gt;w`2B)B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hhuggett3</td>\n",
+       "      <td>qD582##$4QKwGk(?mDyKgijO*yljC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>filchuk4</td>\n",
+       "      <td>zF093%EWaBx#`3J'g{ARi2Ah8WeA$CmO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     username                          password\n",
+       "0    htitley0      vG017?oZU'I+Jt@fsArXzOjO4fP=\n",
+       "1  hbutchard1         yE474)5a$5W3FR6+UppP{cpes\n",
+       "2     dchick2         jZ067!m*y~%*s?m7~@>w`2B)B\n",
+       "3   hhuggett3     qD582##$4QKwGk(?mDyKgijO*yljC\n",
+       "4    filchuk4  zF093%EWaBx#`3J'g{ARi2Ah8WeA$CmO"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('/home/bb/advanced_data_base/username_password.csv')\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "base_url = \"http://localhost:8000/users\"\n",
     "\n",
-    "user_data = {\n",
-    "    \"username\": \"aaa\",\n",
-    "    \"password\": \"aaa\",\n",
-    "    \"is_admin\": False\n",
-    "}\n",
+    "def create_user(username, password, is_admin=False):\n",
+    "    user_data = {\n",
+    "        \"username\": username,\n",
+    "        \"password\": password,\n",
+    "        \"is_admin\": is_admin\n",
+    "    }\n",
+    "    response = requests.post(base_url, json=user_data)\n",
+    "    return response.json()\n",
     "\n",
-    "response = requests.post(base_url, json=user_data)\n",
-    "print(\"Create User Response:\", response.json())\n"
+    "for index, row in data.iterrows():\n",
+    "    username = row['username']\n",
+    "    password = row['password']\n",
+    "    result = create_user(username, password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
