--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -83,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ADB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
