add permissions for users and admins

--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -124,21 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': 1, 'is_admin': False, 'cart_id': None, 'password': 'aaa', 'username': 'aaa', 'address_id': None}]\n"
+      "[{'id': 1012, 'is_admin': False, 'cart_id': None, 'password': '$2b$12$uyZTDAQqSQ7PaN8MQNrRjOue/e6H5IKLc73G8AGoTEuSr//GrPiaG', 'username': 'Barto1900', 'address_id': None}]\n"
      ]
     }
    ],
    "source": [
     "#how to get \n",
-    "\n",
-    "response = requests.get(base_url, params={\"username\": \"aaa\"})\n",
+    "import requests\n",
+    "base_url = \"http://localhost:8000/users\"\n",
+    "response = requests.get(base_url, params={\"username\": \"Barto1900\"})\n",
     "print(response.json())"
    ]
   },
@@ -156,10 +157,7 @@
     }
    ],
    "source": [
-    "import requests\n",
     "\n",
-    "# URL serwera FastAPI\n",
-    "base_url = \"http://localhost:8001\"\n",
     "\n",
     "# Dane użytkownika do rejestracji\n",
     "user_data = {\n",
@@ -174,18 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logowanie użytkownika: {'message': 'Login successful'}\n"
+      "Logowanie użytkownika: {'message': 'Login successful', 'is_admin': False}\n"
      ]
     }
    ],
    "source": [
+    "import requests\n",
+    "\n",
+    "# URL serwera FastAPI\n",
+    "base_url = \"http://localhost:8001\"\n",
     "login_data = {\n",
     "    \"username\": \"1234\",\n",
     "    \"password\": \"1234\"\n",
