--- a/examples/test_database.ipynb
+++ b/examples/test_database.ipynb
@@ -145,24 +145,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rejestracja użytkownika: {'detail': 'Username already exists'}\n"
+      "Rejestracja użytkownika: {'message': 'User registered successfully.'}\n"
      ]
     }
    ],
    "source": [
+    "import requests\n",
     "\n",
+    "# URL serwera FastAPI\n",
+    "base_url = \"http://localhost:8001\"\n",
     "\n",
     "# Dane użytkownika do rejestracji\n",
     "user_data = {\n",
-    "    \"username\": \"12344\",\n",
-    "    \"password\": \"1234\",\n",
+    "    \"username\": \"ABC\",\n",
+    "    \"password\": \"ZAQ!@WSXCDE#\",\n",
+    "    \"is_admin\": True\n",
     "}\n",
     "\n",
     "# Rejestrowanie użytkownika\n",
@@ -172,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logowanie użytkownika: {'message': 'Login successful', 'is_admin': False}\n"
+      "Logowanie użytkownika: {'message': 'Login successful', 'is_admin': True}\n"
      ]
     }
    ],
@@ -189,8 +193,8 @@
     "# URL serwera FastAPI\n",
     "base_url = \"http://localhost:8001\"\n",
     "login_data = {\n",
-    "    \"username\": \"1234\",\n",
-    "    \"password\": \"1234\"\n",
+    "    \"username\": \"ABC\",\n",
+    "    \"password\": \"ZAQ!@WSXCDE#\"\n",
     "}\n",
     "\n",
     "# Logowanie użytkownika\n",
