--- a/examples/crud_product.ipynb
+++ b/examples/crud_product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,11 +221,47 @@
     "await patch_product()\n",
     "await delete_product()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 'bartosz', 'name': 'bartosz', 'description': 'bartosz', 'sale_price': 1.0, 'quantity': 1, 'buy_price': 1.0, 'date': 'bartosz', 'picture_path': 'bartosz'}, {'id': '_i-D_HJoNm', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'Ne5gujv-2m', 'name': 'asd2', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'A42SWH_0Lh', 'name': 'asd3', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'K3Zynjzbvh', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': '2jCQR7eMB-', 'name': 'asd11111', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'LoE_2YDIA7', 'name': 'asd7777777', 'description': 'asd', 'sale_price': 0.01, 'quantity': 1, 'buy_price': 0.03, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'h-khEfBMt2', 'name': 'test', 'description': 'test', 'sale_price': 100.0, 'quantity': 10, 'buy_price': 200.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'kmHPTES0Rd', 'name': 'qwe', 'description': 'qwe', 'sale_price': 12.0, 'quantity': 12, 'buy_price': 12.0, 'date': 'asd', 'picture_path': 'default_path'}, {'id': 'PfY1GYZxMS', 'name': 'asdaaa', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': 'uploads/IMG_0423.JPG'}, {'id': 'j-wO63MQ-W', 'name': 'asdaaa', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': 'uploads/IMG_0423.JPG'}, {'id': 'iLgzW6hM5H', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': 'file_location'}, {'id': 'DmkclSkI91', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': 'file_location'}, {'id': 'ls1174k-RF', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': 'file_location'}, {'id': 'j8hykZ7w2s', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': '66570dfe1d535d86c4bf073d'}, {'id': 'DRnJ0_IXej', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': '66570e001d535d86c4bf0754'}, {'id': 'ZVvTUt1e4h', 'name': 'asd', 'description': 'asd', 'sale_price': 123.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': '66570e141d535d86c4bf076b'}, {'id': 'krUR1T1f_S', 'name': 'SUPER BUTY', 'description': 'asd', 'sale_price': 12322.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': '66570e401d535d86c4bf0782'}, {'id': '2DTcBVSc8E', 'name': 'SUPER BUTY 2', 'description': 'asd', 'sale_price': 12322.0, 'quantity': 123, 'buy_price': 123.0, 'date': 'up to dane', 'picture_path': '66570f291d535d86c4bf0795'}, {'id': 'S18HEC51iC', 'name': 'ADAMA BUTY', 'description': 'ASDASDASDASD', 'sale_price': 0.01, 'quantity': 1, 'buy_price': 0.01, 'date': 'up to dane', 'picture_path': '66570f491d535d86c4bf07a8'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def get_all_products():\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.get(f\"{base_url}/products/\") as response:\n",
+    "            print(await response.json())\n",
+    "\n",
+    "await get_all_products()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
