fixed issues with shipping details on customer side, added layer of protection to docker - only localhost can connect to postgres

--- a/test_notebooks/test_data_flowershop.ipynb
+++ b/test_notebooks/test_data_flowershop.ipynb
@@ -519,6 +519,109 @@
    "source": [
     "'/dwa/trzy.jpg'.split('.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import inspect, MetaData\n",
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql+psycopg2://user:password@localhost/ecommerce-app')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "schema: information_schema\n",
+      "Column: {'name': 'feature_id', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'feature_name', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'sub_feature_id', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'sub_feature_name', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'is_supported', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'is_verified_by', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'comments', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'implementation_info_id', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'implementation_info_name', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'integer_value', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'character_value', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'comments', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'feature_id', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'feature_name', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'is_supported', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'is_verified_by', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'comments', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'sizing_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'sizing_name', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'supported_value', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'comments', 'type': VARCHAR(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "schema: public\n",
+      "Column: {'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': 'nextval(\\'\"public\".address_id_seq\\'::regclass)', 'autoincrement': True, 'comment': None}\n",
+      "Column: {'name': 'name', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'street', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'city', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'postal_code', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': 'nextval(\\'\"public\".user_id_seq\\'::regclass)', 'autoincrement': True, 'comment': None}\n",
+      "Column: {'name': 'username', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'password', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'is_admin', 'type': BOOLEAN(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'address_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'cart_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': 'nextval(\\'\"public\".cart_id_seq\\'::regclass)', 'autoincrement': True, 'comment': None}\n",
+      "Column: {'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': 'nextval(\\'\"public\".cartitem_id_seq\\'::regclass)', 'autoincrement': True, 'comment': None}\n",
+      "Column: {'name': 'product_id', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'quantity', 'type': INTEGER(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'cart_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': 'nextval(\\'\"public\".order_id_seq\\'::regclass)', 'autoincrement': True, 'comment': None}\n",
+      "Column: {'name': 'cart_id', 'type': INTEGER(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'user_id', 'type': INTEGER(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'address_id', 'type': INTEGER(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'date', 'type': VARCHAR(), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'status', 'type': ENUM('PENDING', 'PROCESSING', 'PACKAGING', 'SHIPPED', 'DELIVERED', 'CANCELLED', 'RETURNED', name='orderstatus'), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n",
+      "Column: {'name': 'total_amount', 'type': DOUBLE_PRECISION(precision=53), 'nullable': False, 'default': None, 'autoincrement': False, 'comment': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "schemas = inspector.get_schema_names()\n",
+    "\n",
+    "for schema in schemas:\n",
+    "    print(\"schema: %s\" % schema)\n",
+    "    for table_name in inspector.get_table_names(schema=schema):\n",
+    "        for column in inspector.get_columns(table_name, schema=schema):\n",
+    "            print(\"Column: %s\" % column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tables dropped successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "meta = MetaData()\n",
+    "meta.reflect(bind=engine)\n",
+    "\n",
+    "# Drop all tables\n",
+    "meta.drop_all(bind=engine)\n",
+    "\n",
+    "print(\"All tables dropped successfully.\")"
+   ]
   }
  ],
  "metadata": {
@@ -537,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
